Modified the Home page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,47 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+
+    <!-- Page Title -->
+    <title>Mboga Fresh | Your Local Kenyan Marketplace</title>
+
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="Mboga Fresh — Fresh produce from local Kenyan farmers delivered to your doorstep."
+    />
+    <meta
+      name="keywords"
+      content="Mboga Fresh, fresh produce, Kenyan marketplace, vegetables, fruits"
+    />
+    <meta name="author" content="Mboga Fresh Team" />
+
+    <!-- Open Graph / Social Media -->
+    <meta
+      property="og:title"
+      content="Mboga Fresh | Your Local Kenyan Marketplace"
+    />
+    <meta
+      property="og:description"
+      content="Fresh fruits and vegetables sourced directly from local Kenyan farmers."
+    />
+    <meta property="og:type" content="website" />
+
+    <!-- Google Fonts: Material Symbols -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+      rel="stylesheet"
+    />
+
+    <!-- Favicon using inline SVG as data URI -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- Main JS -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
